--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "modules": "^0.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "school-product-card": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
