--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "logger": "0.0.1",
     "modules": "^0.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
