--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "school-product-card": "^0.1.0",
-	"csssr-school-utils": "https:/github.com/CSSSR-School/junior-course-utils.git"
+    "csssr-school-utils": "https://github.com/CSSSR-School/junior-course-utils.git"
   },
   "scripts": {
     "start": "react-scripts start",
