--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "csssr-school-utils": "https://github.com/CSSSR-School/junior-course-utils.git",
     "logger": "0.0.1",
     "modules": "^0.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
-    "school-product-card": "^0.1.0",
-    "csssr-school-utils": "https://github.com/CSSSR-School/junior-course-utils.git"
+    "school-product-card": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
