--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "csssr-school-utils": "https://github.com/CSSSR-School/junior-course-utils.git",
     "modules": "^0.4.0",
     "react": "^16.12.0",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "school-product-card": "^0.1.0"
