--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "csssr-school-utils": "https://github.com/CSSSR-School/junior-course-utils.git",
+    "discount": "https://github.com/CSSSR-School/junior-course-input-discount.git",
     "modules": "^0.4.0",
     "react": "^16.12.0",
     "react-addons-shallow-compare": "^15.6.2",
