--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^16.14.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.5",
     "school-product-card": "^0.1.0"
   },
   "scripts": {
