--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "school-product-card": "^0.1.0"
   },
   "scripts": {
