--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "connected-react-router": "^6.8.0",
     "csssr-school-utils": "https://github.com/CSSSR-School/junior-course-utils.git",
     "discount": "https://github.com/CSSSR-School/junior-course-input-discount.git",
+    "history": "^4.7.2",
+    "immutable": "^3.8.1",
     "modules": "^0.4.0",
     "react": "^16.14.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
-    "school-product-card": "^0.1.0"
+    "school-product-card": "^0.1.0",
+    "seamless-immutable": "^7.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
