--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "eslint-plugin-prettier": "3.1.2",
     "husky": "3.1.0",
     "lint-staged": "9.5.0",
-    "prettier": "1.19.1"
+    "prettier": "1.19.1",
+    "redux-devtools-extension": "^2.13.5",
+    "remotedev-server": "^0.2.4"
   },
   "lint-staged": {
     "*.+(js|jsx)": [
