--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "concurrently": "^5.3.0",
     "connected-react-router": "^6.8.0",
     "csssr-school-utils": "https://github.com/CSSSR-School/junior-course-utils.git",
     "discount": "https://github.com/CSSSR-School/junior-course-input-discount.git",
@@ -18,12 +19,14 @@
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
     "school-product-card": "^0.1.0",
-    "seamless-immutable": "^7.1.3"
+    "seamless-immutable": "^7.1.3",
+    "uws": "^200.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm:remotedev\" \"react-scripts start\"",
     "build": "react-scripts build",
-    "lint:js": "eslint \"src/**/*.{js, jsx}\" --cache --fix"
+    "lint:js": "eslint \"src/**/*.{js, jsx}\" --cache --fix",
+    "remotedev": "remotedev --hostname=localhost --port=8000"
   },
   "browserslist": [
     ">0.2%",
@@ -36,8 +39,9 @@
     "husky": "3.1.0",
     "lint-staged": "9.5.0",
     "prettier": "1.19.1",
-    "redux-devtools-extension": "^2.13.5",
-    "remotedev-server": "^0.2.4"
+    "redux-devtools-extension": "^2.13.8",
+    "remote-redux-devtools": "^0.5.16",
+    "remotedev-server": "^0.2.7"
   },
   "lint-staged": {
     "*.+(js|jsx)": [
