--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "csssr-school-utils": "https://github.com/CSSSR-School/junior-course-utils.git",
     "discount": "https://github.com/CSSSR-School/junior-course-input-discount.git",
     "history": "^4.7.2",
-    "immutable": "^3.8.1",
     "modules": "^0.4.0",
     "react": "^16.14.0",
     "react-addons-shallow-compare": "^15.6.2",
@@ -17,8 +16,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
-    "school-product-card": "^0.1.0",
-    "seamless-immutable": "^7.1.3"
+    "school-product-card": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
